# self-critique-drift-687e-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  paper_finder_results.json  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  dataset_summary.json
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: OUTLINE.md  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: dataset_accuracy.tex  main_accuracy.tex  stat_tests.tex
paper_search_results/: representation_drift_self-critique_large_language_models_20260309_184248.jsonl
papers/: README.md  deep_reading_notes_raw.txt  paper_metadata.json
papers/pages/: 2310.01798_Large_Language_Models_Cannot_Self-Correct_Reasoning_Yet_manifest.txt  2406.15673_Large_Language_Models_have_Intrinsic_Self-Correction_Ability_manifest.txt  2410.16090_Analysing_the_Residual_Stream_of_Language_Models_Under_Knowledge_Conflicts_manifest.txt
results/evaluations/: example_level_results.csv  layer_cosine_distances.csv  layer_drift_summary.csv  layer_l2_distances.csv  layer_wilcoxon_tests.csv  metrics.json
src/: run_representation_drift_experiment.py
