[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "arxiv>=2.4.1",
    "datasets>=4.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.26.0",
    "pandas>=2.3.3",
    "pypdf>=6.8.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "statsmodels>=0.14.6",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
